kubernetes/dbpedia-mediawiki-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbpedia-mediawiki-db
  labels:
    app: dbpedia-mediawiki-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbpedia-mediawiki-db
  template:
    metadata:
      labels:
        app: dbpedia-mediawiki-db
    spec:
      containers:
        - name: dbpedia-mediawiki-db
          image: mysql
      volumeMounts:
        - mountPath: /var/lib/mysql
          name: dbpedia-pvc
          subPath: mediawiki-db
