kubernetes/dbpedia-mediawiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbpedia-mediawiki
spec:
  selector:
    app: dbpedia-mediawiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: mediawiki
