kubernetes/dbpedia-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbpedia-nginx
spec:
  selector:
    app: dbpedia-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: dbpedia-nginx
