kubernetes/dbpedia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbpedia
spec:
  selector:
    app: dbpedia
  ports:
    - protocol: TCP
      port: 8890
      targetPort: 8890
      name: dbpedia
