kubernetes/dbpedia-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: eudbpedia.apps.openshift.deustotech.eu
  annotations:
    kubernetes.io/tls-acme: 'true'
spec:
  host: eudbpedia.apps.openshift.deustotech.eu
  to:
    kind: Service
    name: dbpedia-nginx
  port:
    targetPort: 8443
  tls:
    termination: passthrough
